feat: remove html errors, adds controller tests, fixes some auth logic etc
