# lib/hexatube_web/controllers/user_registration_controller.ex
@@ -6,13 +6,6 @@ defmodule HexatubeWeb.UserRegistrationController do
 
   action_fallback HexatubeWeb.FallbackController
 
-  swagger_path :new_user do
-    description "Register new user"
-    produces "application/json"
-    parameter :user, :body, Schema.ref(:NewUser), "user object"
-    response 200, "Success"
-  end
-
   def swagger_definitions do
     %{
       NewUser: swagger_schema do
@@ -27,10 +20,28 @@ defmodule HexatubeWeb.UserRegistrationController do
           password: "qwerty1234"
         }
       end,
+      User: swagger_schema do
+        title "User"
+        description "User object"
+        properties do
+          username :string, "username", required: true
+        end
+        example %{
+          username: "Ivan",
+        }
+      end
     }
   end
 
-  def new_user(conn, %{"username" => username, "password" => password}) do
+  swagger_path :new_user do
+    description "Register new user"
+    produces "application/json"
+    parameter :user, :body, Schema.ref(:NewUser), "user object"
+    response 200, "Success"
+  end
+
+  def new_user(conn, params) do
+    %{"username" => username, "password" => password} = params
     case Accounts.register_user(%{"name" => username, "password" => password}) do
       {:ok, _user} ->
         conn
@@ -38,5 +49,16 @@ defmodule HexatubeWeb.UserRegistrationController do
 
       e -> e
     end
+  end
+
+  swagger_path :me do
+    description "Get information about current user"
+    produces "application/json"
+    response 200, "Success", Schema.ref(:User)
+  end
+
+  def me(conn, params) do
+    user = conn.assigns.current_user
+    render(conn, :me, user: user)
   end
 end
